# linuxmuster-squid

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  ROADMAP.md  renovate.json
.claude/: settings.json  settings.json.license
.github/workflows/: build-deb.yml  build-image.yml  ci.yml
controlplane/: pyproject.toml
controlplane/lmnsquid/: __init__.py  api.py  cli.py  config.py  docker_service.py  main.py  models.py  reconciler.py  security.py  store.py  updater.py
controlplane/tests/: conftest.py  test_api.py  test_cli.py  test_docker_integration.py  test_docker_pull.py  test_models.py  test_reconciler.py  test_updater.py  test_validation.py
deploy/: docker-socket-proxy.yml
deploy/clients/: README.md  firefox-policies.json  firefox-policies.json.license
deploy/e2e/: blocked.domains  docker-compose.yml
deploy/instances/: README.md  default-school-teachers.yaml  schuleB-students.yaml
docs/: architecture.md  decisions.md  deployment-gpo.md  keytab-and-dns.md  operations.md  references.md  test-strategy.md  threat-model.md
image/: Dockerfile  entrypoint.sh  healthcheck.sh
image/templates/: squid.conf.template
packaging/: build-deb.sh
packaging/debian/: control  postinst  postrm  prerm
packaging/systemd/: linuxmuster-squid.service
scripts/: blocklist-refresh.sh  discover-ad-facts.sh  provision-keytab.sh
scripts/tests/: access_log_smoke.sh  blocklist_smoke.sh  crabbox_bootstrap.sh  deb_smoke.sh  discover_ad_facts_smoke.sh  e2e_kerberos.sh  load_smoke.sh  logrotate_smoke.sh  provision_keytab_smoke.sh  run.sh
(+7 files in other folders)
